samples/_failures_safe/1761207116_ee0037_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f13bb7f.c: In function ‘main’:
./samples/SAFE/__tmp_5f13bb7f.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
